--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,21 +1,9 @@
 server {
   listen 80 default;
+  proxy_set_header Host         $host;
+  proxy_set_header X-Real_IP    $remote_addr;
   
   location ^~ /hello/ {
     proxy_pass http://0.0.0.0:8080;
-    proxy_set_header Host         $hosr;
-    proxy_set_header X-Real_IP    $remote_addr;
-  }
-  
-  location ^~ /uploads/ {
-    root /home/box/web/;
-  }
-  
-  location ~* ^.+\.\w+$ {
-    root /home/box/web/public;
-  }
-  
-  location / {
-    return 404;
   }
 }
