--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,6 +1,9 @@
-proxy_set_header Host         $host;
-proxy_set_header X-Real_IP    $remote_addr;
+server {
+  listen 80 default
+  proxy_set_header Host         $host;
+  proxy_set_header X-Real_IP    $remote_addr;
   
-location ^~ /hello/ {
-  proxy_pass http://0.0.0.0:8080;
+  location ^~ /hello/ {
+    proxy_pass http://0.0.0.0:8080;
+  }
 }
