--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,5 +1,5 @@
 server {
-  listen 80 default
+  listen 80 default;
   proxy_set_header Host         $host;
   proxy_set_header X-Real_IP    $remote_addr;
   
